--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,3 +35,6 @@ RSpec/MultipleMemoizedHelpers:
   Max: 10
   Exclude:
     - spec/support/**/*
+Lint/MissingSuper:
+  Exclude:
+    - 'app/services/**/*'
